Fix word-wrapping.

--- a/app/assets/stylesheets/user_reviews.css
+++ b/app/assets/stylesheets/user_reviews.css
@@ -67,6 +67,7 @@
 .review-body {
   font-size: 14px;
   margin: 12px 0;
+  word-wrap: break-word;
 }
 
 .review-button {
